--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-	<title>Ejemplo básico</title>
-	<meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tarea</title>
+
+    <link rel="stylesheet" href="estilos/proyecto2.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 
 <body>
-	<h1>La aplicación esta corriendo!</h1>
+    <div class="list roundBorder">
+        <div class="date">
+            <div class="dateRight">
+                <h1 class="titulo">TAREAS POR HACER<i class="bi bi-clipboard2-data-fill"></i><br>
+                    Naidelyn<i class="bi bi-music-note-beamed"></i></h1>
+                <p class="fuente" id="fecha"></p>
+                <!-- <div id="dateNumber"  class="fuente">19</div>
+            <div>
+                <div id="dateMonth" class="fuente">JUNIO</div>
+                <div id="dateYear"  class="fuente">2023</div>
+            </div> -->
+            </div>
+            <div id="dateText"></div>
+        </div>
+        <form class="row">
+            <div class="task-div col-md-3">
+                <input id="inputTask" type="text" name="taskText" autocomplete="off" placeholder="Nueva Tarea"
+                    class="roundBorder">
+                <button class="addTaskButton" id="onclick">
+                    <label for="onclick">Agregar<i class="bi bi-bell-fill"></i></label></button>
 
-	<script src="./index.js" type="module"></script>
+            </div>
+            <div id="btnfilt" class="task-div col-md-3">
+                <input id="inputBuscar" type="text" name="buscarTaskText" autocomplete="off" placeholder="Buscar Tarea"
+                    class="roundBorder">
+                <button class="addTaskButton" id="buscar"><i class="bi bi-search"></i></button>
+
+            </div>
+            <div id="contador" class="col-md-2">
+                <h4 type="text" id="clicks">0</h4>
+                <h6 class="fuente">Tareas Realizadas</h6>
+            </div>
+        </form>
+
+        <div class="sumar-todo" id="tareas">
+        </div>
+
+        <div id="mensajeTareas">
+            <p><i class="bi bi-calendar-check"></i>No Tienes Tareas Por Realizar.</p>
+        </div>
+
 </body>
+<script type="module" src="./proyecto2.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 
 </html>
